--- a/.gitignore
+++ b/.gitignore
@@ -25,7 +25,7 @@ migrate_working_dir/
 **/doc/api/
 **/ios/Flutter/.last_build_id
 .dart_tool/
-.flutter-plugins
+*flutter-plugins
 .flutter-plugins-dependencies
 .packages
 .pub-cache/
@@ -37,8 +37,3 @@ app.*.symbols
 
 # Obfuscation related
 app.*.map.json
-
-# Android Studio will place build artifacts here
-/android/app/debug
-/android/app/profile
-/android/app/release
