--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   carousel_slider: ^4.2.1
   google_fonts: ^3.0.1
+  cloud_firestore: any
+
 
 dev_dependencies:
   flutter_test:
