--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   google_fonts: ^3.0.1
   cloud_firestore: any
   firebase_auth: ^4.3.0
+  flutter_form_builder: ^7.7.0
+  multiselect: ^0.1.0
 
 
 dev_dependencies:
