--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   firebase_auth: ^4.3.0
   flutter_form_builder: ^7.7.0
   multiselect: ^0.1.0
+  form_builder_validators: ^8.4.0
 
 
 dev_dependencies:
