--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   flutter_form_builder: ^7.7.0
   multiselect: ^0.1.0
   form_builder_validators: ^8.4.0
+  form_builder_file_picker: ^2.3.0
 
 
 dev_dependencies:
