--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   multiselect: ^0.1.0
   form_builder_validators: ^8.4.0
   form_builder_file_picker: ^2.3.0
+  csv: ^5.0.1
 
 
 dev_dependencies:
